routes are working

--- a/start/package.json
+++ b/start/package.json
@@ -12,9 +12,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "volleyball": "^1.4.1",
     "webpack": "^3.6.0"
   },
   "dependencies": {
-    "mapbox-gl": "^0.40.1"
+    "body-parser": "^1.18.2",
+    "express": "^4.16.1",
+    "mapbox-gl": "^0.40.1",
+    "path": "^0.12.7",
+    "pg": "^7.3.0",
+    "sequelize": "^4.13.3"
   }
 }
